[tool.poetry]
name = "streamlit-dash"
version = "0.1.0"
description = ""
authors = ["Bruno Silva <bruno.ogs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.41.1"
matplotlib = "^3.10.0"
wordcloud = "^1.9.4"
seaborn = "^0.13.2"
python-dotenv = "^1.0.1"
folium = "^0.19.2"
sqlalchemy = "^2.0.36"
streamlit-folium = "^0.24.0"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
